--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     height: 100%;
 }
 
@@ -8,6 +9,7 @@ body, html {
     font-style: normal;
     font-weight: 400;
 }
+
 .img {
     max-width: 100%;
 }
@@ -25,68 +27,97 @@ a {
     text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
+
 .wrapper {
     min-height: 100%;
 }
+
 .header {
     border-bottom: 2px solid rgb(255, 255, 255);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
+
 .container {
-    min-width: 1130px;
+    max-width: 1130px;
     padding: 0px 5px;
     margin: 0 auto;
+}
 
-}
-.header_container {
+.header_container {}
 
-}
-.logo {
-}
-.logo2 {
-}
+.logo {}
+
+.logo2 {}
+
 .nav__list {
     column-gap: 34px;
     display: flex;
 }
 
-.location {
-    
-}
+.location {}
 
 .location::before {
     content: "";
     width: 15px;
     height: 15px;
-    background:url(img/icons/location.svg) no-repeat center/contain;    
+    background: url(img/icons/location.svg) no-repeat center/contain;
 }
 
 .nav__item {
+    border-bottom: 2px solid white;
 }
+
+.nav__item.active {}
+
 .nav__link {
+    color: aliceblue;
+    text-decoration: none;
 }
-.contacts {
-}
-.location {
-}
-.tel {
-}
-.main {
-}
+
+.contacts {}
+
+.location {}
+
+.tel {}
+
+.main {}
+
 .hero {
+    display: flex;
     background: url(../img/Content/firstbg.png) no-repeat center/cover;
     padding-top: 272px;
     color: white;
     height: 100vh;
+    flex-direction: column;
+    padding-bottom: 50px;
 }
+
+.hero__container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 .hero__main {
+    padding-left: 92px;
+    border-color: blue;
 }
-.Title {
-}
-.hero__subtitle {
-}
+
+.Title {}
+
+.hero__subtitle {}
+
 .hero_btns {
     display: flex;
     column-gap: 20px;
@@ -104,13 +135,9 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
 }
 
-.hero__call-top-action {
+.hero__call-top-action {}
 
-}
-
-.hero__call-top-action span{
-    
-}
+.hero__call-top-action span {}
 
 .advantages {
     display: flex;
@@ -118,18 +145,78 @@ h1, h2, h3, h4, h5, h6 {
     column-gap: 30px;
     justify-content: space-between;
 }
+
 .advantage {
     border-radius: 4px;
     text-align: center;
     padding: 16px 20px;
 }
-.advantage__desc {
-}
+
+.advantage__desc {}
 
 .advantage_theme_transparent {
     border: 2px solid white;
 }
 
-.hero__advantage {
-    
+.hero__advantage {}
+
+span {
+    color: rgba(218, 26, 26, 0.74);
+}
+
+@media (max-width: 960px) {
+    .logo {
+        max-width: 181px;
+    }
+
+
+    .hero {
+        padding: 210px;
+    }
+
+    .container {
+        max-width: 898px;
+    }
+
+    .hero__main {
+        padding-left: 73px;
+    }
+
+}
+
+@media (max-width: 725px) {
+    .container {
+        max-width: 725px;
+    }
+
+    .logo {
+        max-width: 142px;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .contacts {
+        display: none;
+    }
+
+    .hero {
+        padding-top: 170px;
+    }
+
+    .hero__advantage {
+        border-radius: 4px;
+        text-align: center;
+        padding: 16px 20px;
+    }
+
+    .hero__advantage {
+        flex: 0 1 278px;
+    }
+
+    .advantage__img {
+        width: 24px;
+        height: 24px;
+    }
 }
